--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.9.2",
         "drizzle-kit": "^0.31.6",
         "nodemon": "^3.1.10",
@@ -28,10 +29,12 @@
     },
     "dependencies": {
         "@neondatabase/serverless": "^1.0.2",
+        "bcryptjs": "^3.0.3",
         "concurrently": "^9.2.1",
         "cors": "^2.8.5",
         "dotenv": "17.2.3",
         "drizzle-orm": "^0.44.7",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2"
     }
 }
